# attestation-verifier-zk

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
src/: main.rs
src/routes/: health_routes.rs  mod.rs  proof_routes.rs
