[package]
name = "attestation-verifier-zk"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-nitro-enclave-attestation-prover = { git = "https://github.com/automata-network/aws-nitro-enclave-attestation", rev = "0854585", default-features = false, features = ["sp1"] }
anyhow = { version = "1.0", default-features = false }
alloy-primitives = "1.4.1"
dotenv = "0.15.0"
